--- a/testPage.html
+++ b/testPage.html
@@ -6,12 +6,36 @@
         $(document).ready(function () {
             $("#supernatant").hide();
             $("#reload").click(function () {
-                location.reload();
+                window.location.href = updateUrl(window.location.href, "aaa");
             });
             $("#show").click(function () {
                 $("#supernatant").show();
             });
         });
+
+        function updateUrl(url, key) {
+            var key = (key || 't') + '=';
+            var reg = new RegExp(key + '\\d+');
+            var timestamp = +new Date();
+            if (url.indexOf(key) > -1) {
+                return url.replace(reg, key + timestamp);
+            } else {
+                if (url.indexOf('\?') > -1) {
+                    var urlArr = url.split('\?');
+                    if (urlArr[1]) {
+                        return urlArr[0] + '?' + key + timestamp + '&' + urlArr[1];
+                    } else {
+                        return urlArr[0] + '?' + key + timestamp;
+                    }
+                } else {
+                    if (url.indexOf('#') > -1) {
+                        return url.split('#')[0] + '?' + key + timestamp + location.hash;
+                    } else {
+                        return url + '?' + key + timestamp;
+                    }
+                }
+            }
+        }
     </script>
     <style>
         #supernatant {
